# MidnightEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  GaemEngien.sln  GenerateProjects.bat  README.md  generateProject.bat  generateProjects.bat  premake5.lua
Engine/: CMakeLists.txt
Engine/Source/: MidnightEngine.h  Test.cpp  Test.h
Engine/Source/Framework/Core/: Application.h  Input.h  Layer.h  LayerStack.cpp  Log.cpp  Timestep.h  Window.h
Engine/Source/Framework/Events/: Event.h
Engine/Source/Framework/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
Engine/Source/Framework/Renderer/: Buffer.cpp  Camera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  RendererAPI.cpp  RendererAPI.h  Shader.h  Texture.h  VertexArray.cpp  VertexArray.h
Engine/Source/Framework/Scene/: Actor.cpp  Components.cpp  Scene.h  SceneCamera.h  SceneSerializer.cpp  ScriptableActor.cpp
Engine/Source/Platform/Windows/: WindowsInput.cpp  WindowsWindow.h
Engine/Source/RenderAPI/OpenGL/: OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLRendererAPI.cpp  OpenGLTexture.cpp  (+2 more)
Sandbox/: CMakeLists.txt  MidnightEngineProfile-Runtime.json  MidnightEngineProfile-Shutdown.json  MidnightEngineProfile-Startup.json  Sandbox.vcxproj  imgui.ini
Sandbox/Assets/Shaders/: FlatColor.glsl
Sandbox/Source/: Application.cpp  Application.h  SandboxApp.cpp
Sandbox/assets/shaders/: FlatColor.glsl  Texture.glsl
Sandbox/src/: Application.cpp  ExampleLayer.cpp  ExampleLayer.h  Sandbox2D.cpp  Sandbox2D.h  SandboxApp.cpp
(+156 files in other folders)
